--- a/client/test.html
+++ b/client/test.html
@@ -66,7 +66,7 @@
 
             $.ajax({
                 type:'POST',
-                url:'/api/autoSerach',
+                url:'/api/getPixivData',
                 data:upData,
                 dataType:'json',
                 success:function(data){
